<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="27dp"
        android:text="@string/checkAmount" />

    <EditText
        android:id="@+id/checkAmountValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView12"
        android:layout_alignBottom="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView12"
        android:layout_below="@+id/checkAmountValue"
        android:layout_marginTop="16dp"
        android:text="@string/partySize" />

    <EditText
        android:id="@+id/partySizeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView13"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignStart="@+id/checkAmountValue"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonCompute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/partySizeValue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/computeButton" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/buttonCompute"
        android:layout_marginTop="61dp"
        android:text="@string/tipFifteen" />

    <EditText
        android:id="@+id/fifteenPercentTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView14"
        android:layout_alignBottom="@+id/textView14"
        android:layout_toStartOf="@+id/buttonCompute"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifteenPercentTipValue"
        android:layout_alignBottom="@+id/fifteenPercentTipValue"
        android:layout_alignStart="@+id/partySizeValue"
        android:text="@string/tipTwenty" />

    <EditText
        android:id="@+id/twentyPercentTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView18"
        android:layout_alignBottom="@+id/textView18"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/textView18"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView18"
        android:layout_toEndOf="@+id/buttonCompute"
        android:text="@string/tipTwentyFive" />

    <EditText
        android:id="@+id/twentyfivePercentTipValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignParentEnd="true"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fifteenPercentTipValue"
        android:layout_marginTop="56dp"
        android:text="@string/totalFifteen" />

    <EditText
        android:id="@+id/fifteenPercentTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView20"
        android:layout_alignBottom="@+id/textView20"
        android:layout_toEndOf="@+id/textView20"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/fifteenPercentTotalValue"
        android:layout_alignBottom="@+id/fifteenPercentTotalValue"
        android:layout_alignStart="@+id/textView18"
        android:layout_marginStart="11dp"
        android:text="@string/totalTwenty" />

    <EditText
        android:id="@+id/twentyPercentTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView21"
        android:layout_alignBottom="@+id/textView21"
        android:layout_toEndOf="@+id/textView18"
        android:ems="2"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView21"
        android:layout_alignStart="@+id/textView19"
        android:text="@string/totalTwentyFive" />

    <EditText
        android:id="@+id/twentyfivePercentTotalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView22"
        android:layout_alignBottom="@+id/textView22"
        android:layout_toEndOf="@+id/textView19"
        android:ems="2"
        android:inputType="number" />

</RelativeLayout>